# PATTYMELT

./: CMakeLists.txt  README.md  README_interactables.md
src/: AnalysisTools.h  CMakeLists.txt  CycSrimHandler.h  PathManager.h  back_vs_back.cpp  calculate_position_resolution.cpp  check_gain_match.cpp  check_stretching_parameters.cpp  energy_calibration.cpp  front_vs_back.cpp  front_vs_front.cpp  generate_raw_summary_file.cpp  hdbscan.h  initialize_directories.cpp  perform_thickness_measurement.cpp  stretching_parameters.cpp
station/: README.md
station/source/: 250709_BiasCurve.csv
